spacing fixes, backslash-forwardslash fix, styled images in css, fixed media queries

--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cal+Sans&family=Faculty+Glyphic&family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Major+Mono+Display&display=swap');
+
 /*making the css document as desktop first by default*/
 html {
     background: hsl(254 45% 11%);
@@ -41,7 +42,6 @@ li {
     border-radius: 20px;
 }
 
-
 #navbar {
     display: flex;
     position: fixed;
@@ -55,7 +55,8 @@ li {
     width: 100%;
     box-shadow: 0 4px 2px -2px hsl(0 0% 0% / 0.2);
 }
-    .icon {
+
+.icon {
     display: block;
     color: white;
     padding: 0px;
@@ -63,19 +64,21 @@ li {
     position: fixed;
     right: 30px;
     top: 10px;
-  }
+}
 
-#dropdown{
+#dropdown {
     display: none;
     flex-direction: column;
     position: fixed;
     top: 70px;
     right: 0px;
 }
-#dropdown.show{
+
+#dropdown.show {
     display: flex;
 }
-.hide{
+
+.hide {
     display: none;
 }
 
@@ -87,12 +90,11 @@ li {
     color: hsl(255 51.7% 94.5%);
     border: 2px solid hsla(249 40% 70% / .5);
     padding: 0px 20px 0px 20px;
-    
-}
-.navlink:hover{
-    background: hsl(249 45% 45% / 1);
 }
 
+.navlink:hover {
+    background: hsl(249 45% 45% / 1);
+}
 
 h1 {
     text-align: center;
@@ -102,8 +104,6 @@ h1 {
     margin: 0px;
     padding: 0px 0px 0px 0px;
 }
-
-
 
 h2 {
     text-align: center;
@@ -119,7 +119,6 @@ h3 {
     margin: 0px;
     text-align: center;
     padding-bottom: .5vw;
-
 }
 
 #About {
@@ -136,7 +135,6 @@ h3 {
 
 
 #Experience {
-
     font-size: 20px;
     align-content: center;
     margin: auto;
@@ -161,13 +159,9 @@ h3 {
     border-radius: 0px 0px 20px 20px;
 }
 
-#Messages{
+#Messages {
     text-align: center;
-    
 }
-
-
-
 
 .experience-container {
     display: grid;
@@ -225,7 +219,7 @@ h3 {
     text-align: center;
 }
 
-.Projects-block:hover{
+.Projects-block:hover {
     background: hsla(249, 40%, 60%, .8);
 }
 
@@ -234,8 +228,6 @@ h3 {
     font-size: 20px;
     align-content: center;
 }
-
-
 
 .connect-container {
     display: grid;
@@ -249,22 +241,23 @@ h3 {
 .connect-block {
     padding: 20px;
     margin: auto;
-
 }
 
-form[name="leave_message"]{
+#GithubIcon,
+#LinkedInIcon {
+    width: 140px;
+}
+
+form[name="leave_message"] {
     display: grid;
     justify-content: center;
     align-items: center;
     text-align: center;
     padding: 10px 25px 0px;
     margin: auto;
-    
-    
 }
-.form-Element{
-    
-    /*color: hsl(0 0% 100%);*/
+
+.form-Element {
     padding: 10px 10px 10px;
     margin: 10px;
     border-radius: 10px;
@@ -275,10 +268,9 @@ form[name="leave_message"]{
 }
 
 .form-Element:active {
-    background: hsl(249 100% 90%); 
+    background: hsl(249 100% 90%);
     transform: translateY(4px);
 }
-
 
 .copyright {
     color: hsl(0 0% 100% / .75);
@@ -287,7 +279,8 @@ form[name="leave_message"]{
     padding: 5px 10px;
     text-align: right;
 }
-.remove-button{
+
+.remove-button {
     background: hsl(343 100% 61%/ 0.8);
     color: hsl(0 0% 100% / .75);
     margin: 10px;
@@ -317,9 +310,68 @@ form[name="leave_message"]{
     filter: blur(250px);
 }
 
+/* ============================Tablet[portrait] adjustments==============================================*/
+@media (min-width: 501px) and (max-width:900px) {
+    h1 {
+        text-align: center;
+    }
+
+    .dropdown {
+        right: 0px;
+    }
+
+    .icon {
+        display: block;
+        color: white;
+        padding: 0px;
+        font-size: 2rem;
+        position: fixed;
+        right: 20px;
+        top: 10px;
+    }
+
+    .content {
+        padding: 5px;
+        width: 90%;
+        margin: 80px auto 0px;
+    }
+
+    section {
+        scroll-margin-top: 70px;
+        max-width: 100%;
+        padding: 0px;
+        margin: auto;
+    }
+
+    #Experience {
+        padding: 10px;
+    }
+
+    .experience-container {
+        padding: 0px;
+        width: 100%;
+        justify-content: center;
+        margin: auto;
+    }
+
+    .skills-container {
+        justify-content: center;
+        width: 50%;
+        padding: 0px;
+        margin: auto;
+    }
+
+    .About-content {
+        text-indent: 40px;
+        width: 100%;
+        padding: 0px auto 0px;
+        margin: auto;
+    }
+}
+
 /*============================mobile adjustments======================================================*/
 
-@media only screen and (max-width: 500px) {
+@media (min-width: 0px) and (max-width: 500px) {
     #navbar {
         font-size: 20px;
         padding: 0px 20px 10px;
@@ -330,19 +382,19 @@ form[name="leave_message"]{
         font-size: 35px;
     }
 
-    .dropdown{
+    .dropdown {
         top: 55px
     }
 
     .icon {
-    display: block;
-    color: white;
-    padding: 0px;
-    font-size: 2rem;
-    position: fixed;
-    right: 0px;
-    top: -18px;
-  }
+        display: block;
+        color: white;
+        padding: 0px;
+        font-size: 2rem;
+        position: fixed;
+        right: 0px;
+        top: -18px;
+    }
 
     section {
         scroll-margin-top: 70px;
@@ -426,64 +478,5 @@ form[name="leave_message"]{
         width: 250px;
         height: 250px;
         filter: blur(150px);
-    }
-}
-
-/* ============================Tablet[portrait] adjustments==============================================*/
-@media (max-width:900px) {
-
-    h1 {
-        text-align: center;
-    }
-
-    .dropdown {
-        right: 0px;
-    }
-    .icon {
-    display: block;
-    color: white;
-    padding: 0px;
-    font-size: 2rem;
-    position: fixed;
-    right: 20px;
-    top: 10px;
-  }
-
-    .content {
-        padding: 5px;
-        width: 90%;
-        margin: 80px auto 0px;
-    }
-
-    section {
-        scroll-margin-top: 70px;
-        max-width: 100%;
-        padding: 0px;
-        margin: auto;
-    }
-
-    #Experience {
-        padding: 10px;
-    }
-
-    .experience-container {
-        padding: 0px;
-        width: 100%;
-        justify-content: center;
-        margin: auto;
-    }
-
-    .skills-container {
-        justify-content: center;
-        width: 50%;
-        padding: 0px;
-        margin: auto;
-    }
-
-    .About-content {
-        text-indent: 40px;
-        width: 100%;
-        padding: 0px auto 0px;
-        margin: auto;
     }
 }
